--- a/.github/workflows/e2e-android.yml
+++ b/.github/workflows/e2e-android.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   android:
     name: Android
-    runs-on: android-e2e-group
+    runs-on: macos-11
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
